// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render count 10 total 10000 ExpensesSummary 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     totalling 
    $100.00
  </h1>
</div>
`;

exports[`should render count 10 total 10000 ExpensesSummary 2`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $1,141.95
  </h1>
</div>
`;
